# BACKEND-API-Rust

./: .env.example  Cargo.toml  README.md
migrations/2023-04-09-202340_create_products/: up.sql
src/: config.rs  handlers.rs  main.rs  models.rs  schema.rs
